test/classes/initializers/postInit/override3.good
override3.chpl:5: error: the 'override' keyword cannot be applied to 'postinit()' routines
